dom/audiochannel/AudioChannelService.h
@@ -100,6 +100,8 @@ public:
 
   static bool IsEnableAudioCompeting();
 
+  static bool IsServiceStarted();
+
   /**
    * Any audio channel agent that starts playing should register itself to
    * this service, sharing the AudioChannel.
